# matting_post_processing

server_global_matting/matting_version_2.0_batchfiles/: main.cpp  run.sh
server_global_matting/read_folderpath/matting_version_1.0_batchfiles/: CMakeLists.txt  main.cpp  run.sh
server_global_matting/read_folderpath/matting_version_1.0_batchfiles/global-matting/: globalmatting.cpp
server_global_matting/read_folderpath/matting_version_1.0_singlefile/: README  main.cpp
server_global_matting/read_folderpath/matting_version_1.0_singlefile/global-matting/: globalmatting.cpp
server_shared_matting/sharedmatting_batch_list/: CMakeLists.txt  SharedMatting.cpp  main.cpp  run.sh
server_shared_matting/sharedmatting_single_path/: SharedMatting.h  main.cpp
